# uav-tvc-goose-2

./: .gitignore  .gitmodules
calibration/: CMakeLists.txt
calibration/src/: Interface.h  Window.cpp  Window.h  main.cpp
calibration/src/accelerometer/: Accelerometer.cpp  Accelerometer.h  Axis.cpp  Axis.h
calibration/src/gyroscope/: Gyroscope.cpp  Gyroscope.h
calibration/src/magnetometer/: Magnetometer.cpp  Magnetometer.h  Viewer.cpp  Viewer.h  utils.h
calibration/src/servos/: Servos.cpp  Servos.h
sandbox/benchmark/: CMakeLists.txt  results.txt
sandbox/benchmark/HAL/: hal_exceptions.c  stm32f4xx_hal_msp.c
sandbox/benchmark/src/: main.cpp  matrix.h
sandbox/ekf-test/: .mxproject  .project  CMakeLists.txt  ekf-test.ioc  estimator.py  flash.sh  linker.ld
sandbox/ekf-test/Core/Inc/: bmp280_regs.h  hmc5883l_regs.h  main.h  stm32f4xx_it.h
sandbox/ekf-test/Core/Src/: bmp280_compensate.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
sandbox/ekf-test/HAL/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
sandbox/ekf-test/include/: bmp280_compensate.h  bmp280_regs.h  comm.h  communication.h  ekf.h  estimator.h  hmc5883l_regs.h  mpu6050_regs.h  nmea.h  nvm.h  qmc5883l_regs.h
sandbox/ekf-test/src/: comm.c  communication.c  estimator.c  main.c  nmea.c  nvm.c
sandbox/estimator/: estimator.py
sandbox/gps-recv/: CMakeLists.txt
sandbox/gps-recv/HAL/: stm32f4xx_hal_it.c  stm32f4xx_hal_msp.c
sandbox/gps-recv/src/: ekf.h  estimator.cpp  estimator.h  main.c  nmea.c  nmea.h  ublox_settings.h
sandbox/gps-viewer/: CMakeLists.txt  resources.qrc
sandbox/gps-viewer/res/: index.html  script.js  style.css
sandbox/gps-viewer/src/: Map.cpp  Map.h  main.cpp
sandbox/multi-station/: CMakeLists.txt  estimator.py
sandbox/multi-station/include/: EKF.h  Station.h
sandbox/multi-station/src/: Station.cpp  main.cpp
sandbox/pmw3901-recv/: .cproject  .mxproject  .project  pmw3901-recv.ioc
sandbox/pmw3901-recv/Core/Inc/: main.h  pmw3901.h  stm32f4xx_it.h
sandbox/pmw3901-recv/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
sandbox/pose-viewer/: CMakeLists.txt
sandbox/pose-viewer/src/: main.cpp
sandbox/serial/: CMakeLists.txt
sandbox/serial-receiver/: CMakeLists.txt
sandbox/serial-receiver/src/: main.cpp
sandbox/serial/src/: main.cpp
sandbox/state-estimator-test/: .mxproject  .project  state-estimator-test.ioc
sandbox/state-estimator-test/Core/Inc/: main.h  register_map_l3GD20.h  register_map_lsm303dlhc.h  stm32f4xx_it.h
sandbox/state-estimator-test/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
shared/communication/: Serial.cpp  Serial.h  Telnet.cpp  Telnet.h  Visualization3d.cpp  Visualization3d.h
shared/protocol/: protocol.c  protocol.h  protocol_data.h
simulation-cpp/: CMakeLists.txt
simulation-cpp/models/: fin.stl  rotor.stl
simulation-cpp/src/: main.cpp
simulation-cpp/src/abstract/: Controller.h  TrajectoryGenerator.h
simulation-cpp/src/base/: Controller.cpp  Controller.h  Function.h  Selector.h  SharedQueue.h  Simulator.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h  VisualizationSink.h
simulation-cpp/src/controllers/: PFL.cpp  PFL.h  Simple.cpp  Simple.h  Simple2.cpp  Simple2.h
simulation-cpp/src/generators/: Circle.cpp  Circle.h  Lemniscate.cpp  Lemniscate.h  Manual.cpp  Manual.h  Square.cpp  Square.h
simulation-cpp/src/graphs/: Chart.cpp  Chart.h  GraphXY.cpp  GraphXY.h
simulation-cpp/src/interface/: Chart.cpp  Chart.h  Client.cpp  Client.h  Gamepad.cpp  Gamepad.h  GraphXY.cpp  GraphXY.h  ManualControl.cpp  ManualControl.h  VisualClient.cpp  VisualClient.h
simulation-cpp/src/plant/: Plant.cpp  Plant.h
simulation-cpp/src/simulation/: Controller.cpp  Controller.h  HoverController.cpp  HoverController.h  Object.cpp  Object.h  Params.h  PositionController.cpp  PositionController.h  Simulation.cpp  Simulation.h
simulation-cpp/src/trajectory/: Circle.h  Lemniscate.cpp  Lemniscate.h  Manual.cpp  Manual.h
